--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.scratch.js
 
 npm-debug.log*
 yarn-debug.log*
@@ -22,4 +23,5 @@ yarn-error.log*
 
 # firebase
 firebase.js
+
 
